@@ -4,7 +4,8 @@ Changelog
 1.4.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Skip duplicate zope parts when generating logrotate config.
+  [lgraf]
 
 
 1.4.2 (2019-02-04)
